# hy_cifar_detection

./: CMakeLists.txt  classification.cpp  classification.hpp  ftSaliencyDetection2.cpp
cmake/Modules/: FindCaffe.cmake
params/: cifar10_mean.binaryproto  hy_model_iter_320000.caffemodel  hy_model_iter_320000.solverstate
